[Feat] Create weekly calendar in home screen

--- a/Oops-Android/app/build.gradle
+++ b/Oops-Android/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
     // jetpack navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+
+    // flex-box layout(rv내 아이템 중앙 정렬)
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 }
