--- a/Oops-Android/app/build.gradle
+++ b/Oops-Android/app/build.gradle
@@ -65,4 +65,6 @@ dependencies {
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.16.0'
+    // 커스텀 달력
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
 }
