--- a/Oops-Android/app/src/main/AndroidManifest.xml
+++ b/Oops-Android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/Theme.OopsAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".ui.Login.SignUpActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"/>
