--- a/Oops-Android/app/src/main/AndroidManifest.xml
+++ b/Oops-Android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OopsAndroid"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:name=".ApplicationClass">
         <activity
             android:name=".ui.Login.MoreTermsActivity"
             android:exported="false" />
