--- a/Oops-Android/app/src/main/AndroidManifest.xml
+++ b/Oops-Android/app/src/main/AndroidManifest.xml
@@ -3,14 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".ApplicationClass"
         android:allowBackup="true"
         android:icon="@mipmap/ic_main_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_main_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OopsAndroid"
-        tools:targetApi="31"
-        android:name=".ApplicationClass">
+        tools:targetApi="31">
+        <activity
+            android:name=".ui.Tutorial.TutorialActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.Login.MoreTermsActivity"
             android:exported="false" />
