--- a/Oops-Android/app/src/main/AndroidManifest.xml
+++ b/Oops-Android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.OopsAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".ui.Tutorial.Tutorial3Activity"
+            android:exported="false" />
+        <activity
             android:name=".ui.Tutorial.Tutorial2Activity"
             android:exported="false" />
         <activity
