--- a/Oops-Android/app/src/main/AndroidManifest.xml
+++ b/Oops-Android/app/src/main/AndroidManifest.xml
@@ -12,25 +12,30 @@
         android:theme="@style/Theme.OopsAndroid"
         tools:targetApi="31">
         <activity
-            android:name=".ui.Tutorial.Tutorial3Activity"
+            android:name=".ui.Tutorial.Tutorial4Activity"
             android:exported="false"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"/>
+        <activity
+            android:name=".ui.Tutorial.Tutorial3Activity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.Tutorial.Tutorial2Activity"
             android:exported="false"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.Tutorial.TutorialActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.Login.MoreTermsActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.Login.SignUpActivity"
             android:exported="false"
