--- a/Oops-Android/app/src/main/AndroidManifest.xml
+++ b/Oops-Android/app/src/main/AndroidManifest.xml
@@ -12,10 +12,15 @@
         android:theme="@style/Theme.OopsAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".ui.Tutorial.Tutorial5Activity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+        <activity
             android:name=".ui.Tutorial.Tutorial4Activity"
             android:exported="false"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.Tutorial.Tutorial3Activity"
             android:exported="false"
