--- a/Oops-Android/app/build.gradle
+++ b/Oops-Android/app/build.gradle
@@ -54,6 +54,19 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    // Gson
+    implementation 'com.google.code.gson:gson:2.9.0'
+
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.9.0"
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+
+    // okHttp
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+
     // 안드로이드12 대응 스플래시 스크린
     implementation 'androidx.core:core-splashscreen:1.0.1'
 
@@ -66,6 +79,11 @@ dependencies {
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.16.0'
+    
     // 커스텀 달력
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
+
+    // 네이버 로그인 SDK 설정
+    implementation 'com.navercorp.nid:oauth:5.9.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
 }
