--- a/Oops-Android/app/build.gradle
+++ b/Oops-Android/app/build.gradle
@@ -94,4 +94,7 @@ dependencies {
     // 네이버 로그인 SDK 설정
     implementation 'com.navercorp.nid:oauth:5.9.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
+
+    // 푸시 알림 권한
+    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
 }
