--- a/Oops-Android/app/build.gradle
+++ b/Oops-Android/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'androidx.navigation.safeargs'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -97,4 +98,9 @@ dependencies {
 
     // 푸시 알림 권한
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
+
+    // 파이어베이스 연결
+    implementation platform("com.google.firebase:firebase-bom:32.8.0")
+    implementation("com.google.firebase:firebase-analytics")
+    implementation 'com.google.firebase:firebase-messaging:23.4.1'
 }
