--- a/Oops-Android/build.gradle
+++ b/Oops-Android/build.gradle
@@ -11,4 +11,5 @@ plugins {
     id 'com.android.application' version '8.1.3' apply false
     id 'com.android.library' version '8.1.3' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+    id 'com.google.gms.google-services' version "4.4.1" apply false
 }
