Fix: 파이어베이스 알림 아이콘 변경(구글, 삼성)
- 아이콘: 흰색과 알파값으로만 이뤄진 png 파일 사용
- 색상: manifest파일과 service파일에 color설정을 둘 다 해줘야함

--- a/Oops-Android/app/src/main/AndroidManifest.xml
+++ b/Oops-Android/app/src/main/AndroidManifest.xml
@@ -100,6 +100,9 @@
             <meta-data
                 android:name="com.google.firebase.messaging.default_notification_color"
                 android:resource="@color/Main_500"/>
+            <meta-data
+                android:name="com.google.firebase.messaging.default_notification_icon"
+                android:resource="@drawable/ic_noti_logo" />
         </service>
     </application>
 </manifest>
