--- a/Oops-Android/app/src/main/AndroidManifest.xml
+++ b/Oops-Android/app/src/main/AndroidManifest.xml
@@ -67,6 +67,7 @@
         <activity
             android:name=".ui.Login.FindAccountActivity"
             android:exported="false"
+            android:windowSoftInputMode="adjustNothing"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"/>
         <activity
