--- a/Oops-Android/app/src/main/AndroidManifest.xml
+++ b/Oops-Android/app/src/main/AndroidManifest.xml
@@ -6,14 +6,7 @@
         android:name="android.hardware.camera"
         android:required="true" />
 
-    <!-- 안드로이드13 광고 제거 -->
-    <uses-permission
-        android:name="com.google.android.gms.permission.AD_ID"
-        tools:node="remove" />
-
-    <meta-data
-        android:name="google_analytics_adid_collection_enabled"
-        android:value="false" />
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
