--- a/Oops-Android/app/build.gradle
+++ b/Oops-Android/app/build.gradle
@@ -28,6 +28,11 @@ android {
 
     buildTypes {
         release {
+            minifyEnabled true
+            shrinkResources
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -104,9 +109,6 @@ dependencies {
 
     // 구글 로그인 SDK 설정
     implementation 'com.google.android.gms:play-services-auth:21.2.0'
-
-    // 푸시 알림 권한
-    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
 
     // 파이어베이스 연결
     implementation platform("com.google.firebase:firebase-bom:33.0.0")
